Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-35233

Regression in QQmlPropertyMap when used as sibling and inserting properties very late

    XMLWordPrintable

Details

    • 32d05752e00218a40516d43069fca2bee0d9894e

    Description

      Qt 5.2 RC1 breaks some plugins like https://code.launchpad.net/gsettings-qt
      In Qt 5.1.1 they work as expected but reading properties always results in
      "Unable to assign [undefined] to QString"

      but inside of the Component it works.

      How to reproduce (Linux only):
      bzr branch lp:gsettings-qt
      qmake && make && make install

      import QtQuick 2.1
      import QtQuick.Controls 1.0
      import GSettings 1.0
      import QtQuick.Layouts 1.0
      import QtQuick.Dialogs 1.0

      ApplicationWindow {
      width: 300
      height: 100

      GSettings

      { id: test schema.id: 'org.gnome.desktop.interface' }

      Text

      { id:text text: test.toolbarStyle }

      }

      The above works in Qt 5.1.1 and I have also seen similar behavior in other plugins

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            shausman Simon Hausmann
            damianatorrpm Damian Ivanov
            Votes:
            0 Vote for this issue
            Watchers:
            8 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes